Update next dependency version to ^15.5.9

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "node final-test.mjs"
   },
   "dependencies": {
-    "next": "15.5.8",
+    "next": "^15.5.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "axios": "^1.7.9"
