--- a/package.json
+++ b/package.json
@@ -7,25 +7,22 @@
     "build": "next build",
     "start": "next start",
     "test": "node final-test.mjs",
-    "postinstall": "npx update-browserslist-db@latest"
+    "preinstall": "npx browserslist@latest --update-db"
   },
   "dependencies": {
-    "next": "^15.5.9",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "axios": "^1.7.9"
+    "next": "15.5.9",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "axios": "1.7.9",
+    "browserslist": "4.24.4",
+    "caniuse-lite": "1.0.30001900",
+    "update-browserslist-db": "1.1.0"
   },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "typescript": "^5",
-    "caniuse-lite": "^1.0.30001900"
+  "resolutions": {
+    "caniuse-lite": "1.0.30001900",
+    "**/caniuse-lite": "1.0.30001900"
   },
   "engines": {
     "node": "24.x"
-  },
-  "overrides": {
-    "caniuse-lite": "^1.0.30001900"
   }
 }
