--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
   "name": "x402-storacha-api",
   "version": "0.1.0",
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "node final-test.mjs",
-    "preinstall": "npx browserslist@latest --update-db"
+    "test": "node final-test.mjs"
   },
   "dependencies": {
     "next": "15.5.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "axios": "1.7.9",
-    "browserslist": "4.24.4",
-    "caniuse-lite": "1.0.30001900",
-    "update-browserslist-db": "1.1.0"
+    "axios": "1.7.9"
   },
-  "resolutions": {
-    "caniuse-lite": "1.0.30001900",
-    "**/caniuse-lite": "1.0.30001900"
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/node": "^20"
   },
   "engines": {
     "node": "24.x"
