--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "NODE_OPTIONS='--max-old-space-size=4096' next build",
     "start": "next start",
     "test": "node final-test.mjs"
   },
   "dependencies": {
-    "next": "15.5.9",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "14.2.25",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "axios": "1.7.9"
   },
   "engines": {
-    "node": "24.x"
+    "node": "20.x"
   }
 }
