--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
-    "build": "NODE_OPTIONS='--max-old-space-size=4096' next build",
+    "build": "next build",
     "start": "next start",
     "test": "node final-test.mjs"
   },
   "dependencies": {
+    "axios": "1.7.9",
     "next": "14.2.25",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "axios": "1.7.9"
+    "react-dom": "18.2.0"
   },
   "engines": {
     "node": "20.x"
-  }
+  },
+  "packageManager": "yarn@4.9.1+sha512.f95ce356460e05be48d66401c1ae64ef84d163dd689964962c6888a9810865e39097a5e9de748876c2e0bf89b232d583c33982773e9903ae7a76257270986538"
 }
