--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "x402-storacha-api",
   "version": "0.1.0",
+  "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -8,10 +10,10 @@
     "test": "node final-test.mjs"
   },
   "dependencies": {
-    "axios": "1.7.9",
     "next": "14.2.25",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "axios": "1.7.9"
   },
   "engines": {
     "node": "20.x"
