--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "react-dom": "18.2.0",
     "axios": "1.7.9"
   },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/node": "^20"
+  },
   "engines": {
     "node": "20.x"
-  },
-  "packageManager": "yarn@4.9.1+sha512.f95ce356460e05be48d66401c1ae64ef84d163dd689964962c6888a9810865e39097a5e9de748876c2e0bf89b232d583c33982773e9903ae7a76257270986538"
+  }
 }
