--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "test": "node final-test.mjs"
   },
   "dependencies": {
+    "@coinbase/cdp-sdk": "^1.43.0",
+    "axios": "1.7.9",
     "next": "14.2.25",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "axios": "1.7.9"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/node": "^20"
+    "typescript": "^5"
   },
   "engines": {
     "node": "20.x"
